# WaveOpticsFiber

./: CMakeLists.txt  MoM_ob.hpp  Solver.cpp  Solver.hpp  genDist.cpp
cross_section/: circle_scale_test.txt  cotton_mercerized1.txt  ellipse_scale_test.txt  silk_example.txt
